syntax = "proto3";

import "proto/define.proto";
import "google/protobuf/empty.proto";

option go_package = "proto/";
option php_namespace = "prokits\\protocol";
option php_generic_services=true;

service Tracker{
  rpc Login(LoginRequest) returns(LoginResponse);
  rpc Heartbeat(NodeInfo) returns(HeartbeatResponse);
  rpc GetAllNodeInfo(google.protobuf.Empty) returns(NodeInfoResponse);
  rpc Broadcast(BroadcastMessage) returns(google.protobuf.Empty);
  rpc Select(SelectServerRequest) returns(SelectServerResponse);
  rpc Quit(QuitRequest) returns(google.protobuf.Empty);
}